--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "skymantle_boto_buddy"
-description = ""
+description = "A wrappper for boto3 to access common aws severless services."
 authors = [{ name = "Artin Yong-Bannayan", email = "ayongbannayan@skymantle.com" }]
 readme = "README.md"
 dynamic = ["version"]
@@ -44,7 +44,6 @@ _black = "black --check --diff {args:.}"
 _mypy = "mypy --install-types --non-interactive {args:.}"
 cov = "pytest -v --cov-config=pyproject.toml --cov {args} "
 no-cov = "cov --no-cov {args}"
-
 
 [tool.mypy]
 exclude = [
@@ -139,3 +138,11 @@ exclude_lines = [
 [tool.pytest.ini_options]
 pythonpath = "src"
 markers = []
+
+[tool.hatch.build.targets.sdist]
+exclude = [
+  "/.vscode",
+  "/.github",
+  ".gitignore",
+  "Makefile"
+]
