--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ dependencies = [
   "bandit",
   "black",
   "ruff",
-  "moto[ssm,cloudformation]"
+  "moto[s3,ssm,cloudformation]"
 ]
 path = ".venv"
 
@@ -127,6 +127,7 @@ source = ["src"]
 omit = [
     ".venv/*",
     "tests/*",
+    "src/skymantle_boto_buddy/__about__.py"
 ]
 
 [tool.coverage.report]
