Update library to support providing option Session insance.Update library to more clearly determine its running in a lambda function.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,7 +106,9 @@ ignore = [
   # Ignore checks for use `datetime.UTC` alias
   "UP017",
   # Ignore checks for f-string literal in exception message
-  "EM102"
+  "EM102",
+  # Ignore too many arguments in function definition
+  "PLR0913"
 ]
 unfixable = []
 
