Add a setup.py because aws-lambda-builders requires one when referencing packages through git

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -144,6 +144,7 @@ pythonpath = "src"
 markers = []
 
 [tool.hatch.build.targets.sdist]
+support-legacy = true
 exclude = [
   "/.vscode",
   "/.github",
