--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,13 @@
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
-    "yaml.validate": false
+    "yaml.validate": false,
+    "cSpell.words": [
+        "boto",
+        "botocore",
+        "moto",
+        "skymantle",
+        "stepfunctions",
+        "usefixtures"
+    ]
 }
