--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
         "boto",
         "botocore",
         "fileobj",
+        "keepends",
         "moto",
         "pytest",
         "skymantle",
