--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "skymantle_boto_buddy"
-version = "0.2.0"
+version = "0.3.0"
 dependencies=[]
 requires-python = ">=3.11"
 authors = [{ name = "Artin Yong-Bannayan", email = "ayongbannayan@skymantle.com" }]
@@ -22,8 +22,8 @@ classifiers = [
 boto = ["boto3"]
 
 [project.urls]
-Home = "https://github.com/skymantle-tech/boto3-powertools"
-Issues = "https://github.com/skymantle-tech/boto3-powertools/issues"
+Home = "https://github.com/skymantle-tech/skymantle-boto-buddy"
+Issues = "https://github.com/skymantle-tech/skymantle-boto-buddy/issues"
 
 [tool.hatch.metadata]
 allow-direct-references = true
@@ -31,29 +31,15 @@ allow-direct-references = true
 [tool.hatch.envs.default]
 features = ["boto"]
 dependencies = [
-  "mypy",
   "pytest",
   "pytest-cov",
   "pytest-mock",
   "bandit",
   "black",
   "ruff",
-  "moto[s3,dynamodb,ssm,cloudformation,sts,logs,stepfunction]"
+  "moto[s3,dynamodb,ssm,cloudformation,sts,logs]"
 ]
 path = ".venv"
-
-[tool.hatch.envs.default.scripts]
-_bandit = "bandit -c pyproject.toml -r {args:.}"
-_ruff = "ruff {args:.}"
-_black = "black --check --diff {args:.}"
-_mypy = "mypy --install-types --non-interactive {args:.}"
-cov = "pytest -v --cov-config=pyproject.toml --cov {args:./src} "
-
-[tool.mypy]
-exclude = [
-    "dist",
-    ".venv"
-]
 
 [tool.black]
 line-length = 120
@@ -66,7 +52,7 @@ exclude_dirs = [".venv", "tests", "dist"]
 exclude = [".venv"]
 target-version = "py311"
 line-length = 120
-select = [
+lint.select = [
   "A",
   "B",
   "C",
@@ -93,7 +79,7 @@ select = [
   "W",
   "YTT",
 ]
-ignore = [
+lint.ignore = [
   # Ignore checks for use `datetime.UTC` alias
   "UP017",
   # Ignore checks for f-string literal in exception message
@@ -101,15 +87,15 @@ ignore = [
   # Ignore too many arguments in function definition
   "PLR0913"
 ]
-unfixable = []
+lint.unfixable = []
 
-[tool.ruff.flake8-quotes]
+[tool.ruff.lint.flake8-quotes]
 inline-quotes = "double"
 
-[tool.ruff.flake8-tidy-imports]
+[tool.ruff.lint.flake8-tidy-imports]
 ban-relative-imports = "all"
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 # Tests can use magic values, assertions, and relative imports
 "tests/**/*" = ["PLR2004", "S101", "I001"]
 
@@ -136,7 +122,6 @@ markers = []
 [tool.hatch.build.targets.sdist]
 support-legacy = true
 exclude = [
-  "/.vscode",
   "/.vscode",
   "/.github",
   ".gitignore",
